Fix club theme radio button styling Fix filter module reset (some residual mootools javascript was missed) Relieve some flickering of left menu by not using uikit-navbar for left navigation New config option for left menu to allow response to click instead of hover or even not show the revealing labels at all Catch corrupted old event with missing repeates during delete to allow them to be deleted without a 403 error Hide showon elements by default before JS takes over to reveal as needed Fix iCal export when specific catid or year values are selected Fix calendar icon for date picker in old version of event editing Make sure php 7 is used before upgrading to JEvents 3.6+

--- a/component/site/assets/css/eventsadmin.css
+++ b/component/site/assets/css/eventsadmin.css
@@ -203,6 +203,13 @@ fieldset.checkboxes li {
     min-height: 40px;
 }
 
+/* showon initial style for event editing */
+/* Initial showon hidden */
+#jevents .adminform [data-showon-gsl]:not([data-showon-gsl=""]), #jevents .adminform [data-showon]:not([data-showon=""])
+{
+    display:none;
+}
+
 #jevents .jevbootstrap .adminform #myEditTabsContent .row, #jevents .jevbootstrap .adminform div, adminform .row {
     margin-left: 0;
     padding-bottom: 10px;
